--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,31 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\node_modules\\@entrinsik\\informer\\index.js",
+            "program": "${workspaceFolder}/node_modules/@entrinsik/informer/index.js",
             "args": [
                 "--NODE_ENV=production",
-                "--hapi-plugin=C:\\Users\\robin\\git\\the-buddies-hack-it"
+                "--hapi-plugin=${workspaceFolder}"
+                
+            ],
+            "outputCapture": "std"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program Development",
+            "program": "${workspaceFolder}/node_modules/@entrinsik/informer/index.js",
+            "args": [
+                "--NODE_ENV=development",
+                "--hapi-plugin=${workspaceFolder}"
                 
             ],
             "outputCapture": "std"
         }
+
     ]
 }
